--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -17,3 +17,16 @@ spec:
         image: gcr.io/google-samples/node-hello:1.0
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-world
+spec:
+  selector:
+    app: hello-world
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
